--- a/fall2024/assignment/hw1/hw1.tex
+++ b/fall2024/assignment/hw1/hw1.tex
@@ -78,8 +78,11 @@ that all of this is my own work.} \\
 Welcome to your first assignment! The goal of this assignment is to get familiar with basic text classification models and explore word vectors using basic linear algebra tools.
 \textbf{Before you get started, please read the Submission section thoroughly}.
 
+\section*{Due Date - 11:59 PM 09/20/2024}
+\
 \section*{Submission}
 Submission is done on Gradescope. \\
+
 
 \textbf{Written:} When submitting the written parts, make sure to select \textbf{all} the pages that contain part of your answer for that problem, or else you will not get credit.
 You can either directly type your solution between the \texttt{shaded} environments in the released \texttt{.tex} file,
